--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "prettier": "^2.0.5"
   },
   "scripts": {
-    "start": "REACT_APP_STAGE=staging react-scripts start",
-    "build": "REACT_APP_STAGE=staging react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
